kubernetes/_base/miscellaneous/homarr/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: homarr
spec:
  redirectScheme:
    scheme: https
    permanent: true
