kubernetes/_base/miscellaneous/homarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: homarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      automountServiceAccountToken: false
      containers:
        - name: homarr
          image: ghcr.io/homarr-labs/homarr:latest
          ports:
            - containerPort: 7575
          volumeMounts:
            - mountPath: /app/data/configs
              name: homarr-configs
            - mountPath: /app/public/icons
              name: homarr-icons
            - mountPath: /data
              name: homarr-data
          resources:
            requests:
              memory: "208Mi"
              cpu: "10m"
              ephemeral-storage: "1Gi"
            limits:
              memory: "208Mi"
              ephemeral-storage: "2Gi"
      volumes:
        - name: homarr-configs
          persistentVolumeClaim:
            claimName: homarr-configs
        - name: homarr-icons
          persistentVolumeClaim:
            claimName: homarr-icons
        - name: homarr-data
          persistentVolumeClaim:
            claimName: homarr-data
