kubernetes/_base/miscellaneous/homarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: homarr
spec:
  selector:
    app: homarr
  ports:
    - name: web
      protocol: TCP
      port: 7575
      targetPort: 7575
