kubernetes/_base/miscellaneous/homarr/ingress.yaml
# HTTP ingress with redirect to HTTPS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr-ingress-http
  namespace: homarr
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: homarr-https-redirect@kubernetescrd
spec:
  rules:
    - host: homarr.sargeant.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homarr
                port:
                  number: 7575
---
# HTTPS ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr-ingress-https
  namespace: homarr
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/service.serversscheme: http
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/redirect-to-https: "true"
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  tls:
    - hosts:
        - homarr.sargeant.co
      secretName: homarr-tls
  rules:
    - host: homarr.sargeant.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homarr
                port:
                  number: 7575
